force-app/main/default/objects/wrts_prcgvr__ActivityTemplate__c/wrts_prcgvr__ActivityTemplate__c.object-meta.xml
<CustomObject>
    <description>Defines instantiated Activity behaviors, initial data and appereance</description>
    <label>Activity Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>