force-app/main/default/objects/wrts_prcgvr__ActivityTemplate__c/fields/wrts_prcgvr__DueDateUnit__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__DueDateUnit__c</fullName>
    <description>Units for the calculation of the due date</description>
    <inlineHelpText>Units for the calculation of the due date</inlineHelpText>
    <label>Due Date Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>