force-app/main/default/objects/wrts_prcgvr__ActivityTemplate__c/fields/wrts_prcgvr__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__ObjectType__c</fullName>
    <description>The main object type on which the template is applied - eg Case, Contract</description>
    <inlineHelpText>The main object type on which the template is applied - eg Case, Contract</inlineHelpText>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>