force-app/main/default/objects/wrts_prcgvr__ActivityTemplate__c/fields/wrts_prcgvr__Priority__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__Priority__c</fullName>
    <description>Priority of the Activity Template</description>
    <inlineHelpText>Priority of the Activity Template</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Highest</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Normal</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Lowest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>